<resources>
    <string name="app_name">AndroidWeatherApp</string>
    <string name="weather_api_url_readable">weatherapi.com</string>
    <string name="weather_api_desc">Designed for developers by developers, Weather API is the ultimate weather and geolocation API trusted by +215K users worldwide.</string>

    <string name="no_alerts_text">No alerts in the current location</string>
    <string name="app_widget_desc"> Stay informed about the weather conditions without opening the app, making it convenient and efficient for daily planning.</string>

    <string name="notification_channel_id">WeatherNotifications</string>
    <string name="notification_channel_name">WeatherAppChannel</string>
    <string name="notification_channel_desc">This channel will be used to show when sunning the worker or foreground service notification</string>

    <string name="worker_content_text">Fetching the current weather information, this will take couple of seconds</string>
    <string name="worker_content_title">Fetching Current Weather..</string>

    <string name="background_location_title">Background location required</string>
    <string name="background_location_body">For the app widgets you need background location permission,click on allow all time</string>

    <string name="no_location_body">Allow location permissions to continue</string>
    <string name="no_location_title">Location permissions not found</string>

    <string name="saved_location_helper_text">All saved city data will be synced in the interval of 12 hrs</string>

    <string name="no_location_title_widget">No Location received</string>
    <string name="no_location_desc_widget">Please provide background permissions</string>

    <string name="initial_loading_layout_text">Initializing…</string>

    <string name="location_icon_widget_placeholder_content_desc">Location Icon</string>
    <string name="current_location_widget_placeholder">Los Altos</string>
    <string name="current_weather_widget_placeholder">Sunny</string>

    <string name="temperature_widget_placeholder">62.7°</string>
    <string name="wind_title_widget_placeholder">Wind</string>
    <string name="wind_value_widget_placeholder">3.6kmh</string>
    <string name="humidity_title_widget_placeholder">Humidity</string>
    <string name="humidity_value_widget_placeholder">83%</string>
    <string name="rain_title_widget_placeholder">Rain</string>
    <string name="rain_value_widget_placeholder">0.0mm</string>

    <string name="location_symbol">Location Symbol</string>
    <string name="refresh">Refresh</string>
    <string name="error_text">Error</string>
    <string name="loading_text">Loading</string>
    <string name="no_weather_data">No weather Data found</string>
    <string name="hourly_weather_title">Hourly Weather</string>
    <string name="forecast_text">Forecast</string>
    <string name="astronomical_data">Astronomical Data</string>
    <string name="forecast_route_title">Forecast</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="precipitation">Rainfall</string>

    <string name="search_placeholder">Search …</string>
    <string name="loading_placeholder">Requesting..</string>
    <string name="data_from_api_text">Data from API</string>
    <string name="saved_locations_title">Saved Locations</string>
    <string name="no_saved_locations">No locations are saved</string>
    <string name="city_not_found_text">City Not Found</string>
    <string name="saved_location_cards_date_time_text">Date/Time</string>
    <string name="remove_button_text">Remove</string>
    <string name="feels_like_text">Feels Like</string>
</resources>