<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_rounded_surface"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <ImageView
            style="@style/Widget.WeatherIcons"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/location_icon_widget_placeholder_content_desc"
            android:foregroundTint="@color/on_primary_container"
            android:foregroundTintMode="screen"
            android:padding="4dp"
            android:src="@drawable/ic_location_symbol" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_location_widget_placeholder"
                android:textColor="@color/primary"
                android:textFontWeight="700"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_weather_widget_placeholder"
                android:textColor="@color/secondary"
                android:textFontWeight="500"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_rounded_surface"
        android:padding="4dp">

        <ImageView
            style="@style/Widget.WeatherIcons"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rounded_container"
            android:contentDescription="@string/current_weather_widget_placeholder"
            android:padding="10dp"
            android:src="@drawable/ic_weather_clear"
            app:tint="@color/on_primary_container" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/temperature_widget_placeholder"
            android:textColor="@color/secondary"
            android:textFontWeight="700"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_rounded_container"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="2dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Widget.WeatherIcons"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/rain_title_widget_placeholder"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_rain"
                app:tint="@color/on_primary_container" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rain_value_widget_placeholder"
                android:textColor="@color/on_primary_container"
                android:textFontWeight="500"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="2dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Widget.WeatherIcons"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/humidity_title_widget_placeholder"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_humidity"
                app:tint="@color/on_primary_container" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_value_widget_placeholder"
                android:textColor="@color/on_primary_container"
                android:textFontWeight="500"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            style="@style/Widget.WeatherIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="2dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/Widget.WeatherIcons"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/wind_title_widget_placeholder"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_wind_speed"
                app:tint="@color/on_primary_container" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_value_widget_placeholder"
                android:textColor="@color/on_primary_container"
                android:textFontWeight="500"
                android:textSize="8sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>